[package]
name = "kuon"
version = "0.0.5"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"
description = "Twitter Client Library written in Rust"
repository = "https://github.com/hppRC/kuon"
license = "MIT"
readme = "README.md"
categories = ["api-bindings"] # https://crates.io/category_slugs
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.31"
percent-encoding = "2.1.0"
# TODO #1: use specific features
tokio = { version = "0.2.21", features = ["full"] }
reqwest = "0.10.5"
thiserror = "1.0.19"
maplit = "1.0.2"
base64 = "0.12.3"
serde = "1.0.110"
serde_json = "1.0.56"
serde_derive = "1.0.110"
chrono = "0.4.13"
hmac-sha1 = "0.1.3"

[dev-dependencies]
wiremock = "0.2.2"
