[package]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
categories = ["api-bindings"] # https://crates.io/category_slugs
description = "Twitter Client Library written in Rust"
edition = "2018"
keywords = []
license = "MIT"
name = "kuon"
readme = "README.md"
repository = "https://github.com/hppRC/kuon"
version = "0.0.26"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "^1.0.32"
base64 = "^0.12.3"
chrono = {version = "^0.4.11", features = ["serde"]}
hmac-sha1 = "^0.1.3"
kuon_macro = {version = "^0", path = "kuon_macro"}
maplit = "^1.0.2"
percent-encoding = "^2.1.0"
reqwest = "^0.11"
serde = "^1.0.124"
serde_derive = "^1.0.124"
serde_json = "^1.0.64"
thiserror = "^1.0.24"
# TODO #1: use specific features
tokio = {version = "^1.3.0", features = ["full"]}

[dev-dependencies]
wiremock = "^0.5.1"
