[package]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"
name = "kuon_macro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = "1.0.64"
# TODO
