[package]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
categories = ["api-bindings"] # https://crates.io/category_slugs
description = "Twitter Client Library written in Rust"
edition = "2018"
keywords = []
license = "MIT"
name = "kuon_macro"
readme = "README.md"
repository = "https://github.com/hppRC/kuon"
version = "0.0.0"

[dependencies]
kuon_request_derive = {version = "^0", path = "kuon_request_derive"}
