[package]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"
name = "kuon_request_derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
kuon = "0.0.22"
proc-macro2 = "1.0.24"
proc_macro_utils = {path = "../proc_macro_utils"}
quote = "1.0.9"
syn = "1.0.64"
heck = "0.3.2"
