[package]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
categories = ["api-bindings"] # https://crates.io/category_slugs
description = "Twitter Client Library written in Rust"
edition = "2018"
keywords = []
license = "MIT"
name = "kuon_request_derive"
readme = "README.md"
repository = "https://github.com/hppRC/kuon"
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.2"
kuon_proc_macro_utils = {version = "^0", path = "../kuon_proc_macro_utils"}
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = "1.0.64"
