[package]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"
name = "proc_macro_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = {version = "1.0.64", features = ["extra-traits"]}
